removed extraneous paper libraries, resolved some layout issues, tween issue now working

--- a/css/polarproject.css
+++ b/css/polarproject.css
@@ -6,8 +6,6 @@
     padding: 0;
     margin-left: auto;
     margin-right: auto;
-    boder: red solid;
-
 }
 
 body, html {
